// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Molecules/Card/Card Box Default 1`] = `
<div
  class="rpl-card-box"
>
  <!---->
   
  <div
    class="rpl-card-box__items"
  >
    <div
      class="rpl-card-box__item"
    >
      <div
        class="rpl-card-emergency"
      >
        <div
          class="rpl-card-emergency__content"
        >
          <div
            class="rpl-card-emergency__subtitle"
          >
            <span>
              Urgent
            </span>
          </div>
           
          <h2
            class="rpl-card-emergency__title"
          >
            Emergency Assistance
          </h2>
           
          <p
            class="rpl-card-emergency__summary"
          >
            Dial 000 for police, fire & ambulance
          </p>
        </div>
         
        <div
          class="rpl-card-emergency__cta"
        >
          <span
            class="rpl-card-emergency__separator"
          />
           
          <a
            class="rpl-link rpl-card-emergency__cta-link"
            data-print-url="tel:0000"
            href="tel:0000"
          >
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--phone_number rpl-icon--color_primary"
              overflow="visible"
              style="width: 14.700000000000001px; height: 14.700000000000001px;"
              viewBox="0 0 14 14"
            >
              <path
                d="M13.738 10.68l-2.317-2.33a.899.899 0 00-1.272-.001l-2.06 2.058-4.494-4.492 2.062-2.06a.899.899 0 00.001-1.27L3.339.263a.9.9 0 00-1.272 0L.004 2.325 0 2.322C0 8.772 5.231 14 11.684 14l2.053-2.05a.897.897 0 00.001-1.27z"
              />
               
            </svg>
             
            <span
              class="rpl-card-emergency__cta-link-text"
            >
              
        Call 0000
      
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      class="rpl-card-box__item"
    >
      <div
        class="rpl-card-emergency"
      >
        <div
          class="rpl-card-emergency__content"
        >
          <div
            class="rpl-card-emergency__subtitle"
          >
            <span>
              Urgent
            </span>
          </div>
           
          <h2
            class="rpl-card-emergency__title"
          >
            Police Assistance Line
          </h2>
           
          <p
            class="rpl-card-emergency__summary"
          >
            Dial 000 for police, fire & ambulance
          </p>
        </div>
         
        <div
          class="rpl-card-emergency__cta"
        >
          <span
            class="rpl-card-emergency__separator"
          />
           
          <a
            class="rpl-link rpl-card-emergency__cta-link"
            data-print-url="tel:000"
            href="tel:000"
          >
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--phone_number rpl-icon--color_primary"
              overflow="visible"
              style="width: 14.700000000000001px; height: 14.700000000000001px;"
              viewBox="0 0 14 14"
            >
              <path
                d="M13.738 10.68l-2.317-2.33a.899.899 0 00-1.272-.001l-2.06 2.058-4.494-4.492 2.062-2.06a.899.899 0 00.001-1.27L3.339.263a.9.9 0 00-1.272 0L.004 2.325 0 2.322C0 8.772 5.231 14 11.684 14l2.053-2.05a.897.897 0 00.001-1.27z"
              />
               
            </svg>
             
            <span
              class="rpl-card-emergency__cta-link-text"
            >
              
        Call 000
      
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      class="rpl-card-box__item"
    >
      <div
        class="rpl-card-emergency"
      >
        <div
          class="rpl-card-emergency__content"
        >
          <div
            class="rpl-card-emergency__subtitle"
          >
            <span>
              Urgent
            </span>
          </div>
           
          <h2
            class="rpl-card-emergency__title"
          >
            Police Assistance Line
          </h2>
           
          <p
            class="rpl-card-emergency__summary"
          >
            Dial 000 for police, fire & ambulance
          </p>
        </div>
         
        <div
          class="rpl-card-emergency__cta"
        >
          <span
            class="rpl-card-emergency__separator"
          />
           
          <a
            class="rpl-link rpl-card-emergency__cta-link"
            data-print-url="/home"
            href="/home"
          >
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary"
              overflow="visible"
              style="width: 13.65px; height: 12.600000000000001px;"
              viewBox="0 0 13 12"
            >
              <path
                d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
              />
               
            </svg>
             
            <span
              class="rpl-card-emergency__cta-link-text"
            >
              
        Internal link
      
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      class="rpl-card-box__item"
    >
      <div
        class="rpl-card-emergency"
      >
        <div
          class="rpl-card-emergency__content"
        >
          <!---->
           
          <h2
            class="rpl-card-emergency__title"
          >
            Police Assistance Line
          </h2>
           
          <p
            class="rpl-card-emergency__summary"
          >
            Dial 000 for police, fire & ambulance
          </p>
        </div>
         
        <div
          class="rpl-card-emergency__cta"
        >
          <span
            class="rpl-card-emergency__separator"
          />
           
          <a
            class="rpl-link rpl-card-emergency__cta-link"
            data-print-url="http://google.com"
            href="http://google.com"
          >
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--external_link rpl-icon--color_primary"
              overflow="visible"
              style="width: 14.700000000000001px; height: 14.700000000000001px;"
              viewBox="0 0 14 14"
            >
              <path
                d="M14 1.54v11.062C14 13.3 13.3 14 12.46 14H1.54C.7 14 0 13.3 0 12.46V1.54C0 .7.7 0 1.54 0h11.062C13.3 0 14 .7 14 1.54zm-2.8.42H7.7c-.56 0-.981.84-.419 1.259l.98.98-6.16 6.16a.428.428 0 000 .563l.977.976c.14.141.422.141.563 0l6.16-6.16.98.98c.418.563 1.258.141 1.258-.417V2.8c0-.422-.418-.84-.84-.84z"
              />
               
            </svg>
             
            <span
              class="rpl-card-emergency__cta-link-text"
            >
              
        External link
      
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Card/Card Carousel Default 1`] = `
<div
  class="rpl-card-carousel"
>
  <!---->
   
  <h2
    class="rpl-card-carousel__title"
  >
    Featured Content
  </h2>
   
  <div
    class="rpl-card-carousel__slider"
  >
    <div
      class="VueCarousel"
    >
      <div
        class="VueCarousel-wrapper"
      >
        <div
          class="VueCarousel-inner"
          style="transform: translate(0px, 0); transition: 0.5s ease transform; flex-basis: 0px; visibility: hidden; height: auto;"
        >
          <div
            class="VueCarousel-slide rpl-card-carousel__slide VueCarousel-slide-active"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-event rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <img
                    alt=""
                    class="rpl-responsive-image rpl-card-content__image rpl-responsive-image--fit-cover"
                    height="340"
                    src="https://placehold.it/580x340"
                    style="object-position: 50.00% 50.00%; font-family: 'object-fit: cover; object-position: 50.00% 50.00%;';"
                    width="580"
                  />
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-event__meta"
                  >
                    <div
                      class="rpl-card-event__date"
                    >
                      10 July
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-event__title"
                  >
                    This is the headline of an event
                  </h2>
                   
                  <div
                    class="rpl-card-event__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-event__summary"
                    >
                      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet, consecteten dolor lorem ipsum dolor sit amet, consecte
                    </p>
                  </div>
                   
                  <p
                    class="rpl-card-event__location"
                  >
                    <svg
                      aria-hidden="true"
                      class="rpl-icon rpl-icon--map_marker rpl-icon--color_secondary"
                      overflow="visible"
                      style="width: 9px; height: 12px;"
                      viewBox="0 0 12 16"
                    >
                      <path
                        d="M0 6c0 4.41 6 10 6 10s6-5.59 6-10c0-3.25-2.683-6-6-6S0 2.75 0 6zm3.75 0a2.25 2.25 0 114.502.002A2.25 2.25 0 013.75 6z"
                      />
                       
                    </svg>
                    South Yarra
                  </p>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See event
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       details
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            class="VueCarousel-slide rpl-card-carousel__slide VueCarousel-slide-active VueCarousel-slide-center"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <!---->
                 
                <div
                  class="rpl-card-content__details"
                >
                  <h2
                    class="rpl-card-keydates__title"
                  >
                    Key calendar dates
                  </h2>
                   
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16h14V5H2v11zM17 2h-2v-.99C15 .452 14.553 0 14 0c-.553 0-1 .452-1 1.01V2H5v-.99C5 .452 4.553 0 4 0c-.553 0-1 .452-1 1.01V2H1a1 1 0 00-1 1v14a1 1 0 001 1h16a1 1 0 001-1V3a1 1 0 00-1-1zm-7 12.021h4v-4h-4v4z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        3 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      Term two starts
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      Its back to the classroom as school start term two on the 16th April.
                    </p>
                  </div>
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16h14V5H2v11zM17 2h-2v-.99C15 .452 14.553 0 14 0c-.553 0-1 .452-1 1.01V2H5v-.99C5 .452 4.553 0 4 0c-.553 0-1 .452-1 1.01V2H1a1 1 0 00-1 1v14a1 1 0 001 1h16a1 1 0 001-1V3a1 1 0 00-1-1zm-7 12.021h4v-4h-4v4z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        23 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      ANZAC Day
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      National day of remembrance to commemorate the ANZACs.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See the events
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       calendar
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            class="VueCarousel-slide rpl-card-carousel__slide VueCarousel-slide-active"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-promotion rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <img
                    alt=""
                    class="rpl-responsive-image rpl-card-content__image rpl-responsive-image--fit-cover"
                    height="340"
                    src="https://placehold.it/580x340"
                    style="object-position: 50.00% 50.00%; font-family: 'object-fit: cover; object-position: 50.00% 50.00%;';"
                    width="580"
                  />
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-promotion__meta"
                  >
                    <div
                      class="rpl-card-promotion__date"
                    >
                      10 July
                    </div>
                     
                    <div
                      class="rpl-card-promotion__tag"
                    >
                      News
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-promotion__title"
                  >
                    This is display copy that wraps 2 lines
                  </h2>
                   
                  <div
                    class="rpl-card-promotion__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-promotion__summary"
                    >
                      We are looking at ways to make housing more affordable and renting more secure. Tell us what works for you or find out what's happening.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      Read
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       more
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-event rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <img
                    alt=""
                    class="rpl-responsive-image rpl-card-content__image rpl-responsive-image--fit-cover"
                    height="340"
                    src="https://placehold.it/580x340"
                    style="object-position: 50.00% 50.00%; font-family: 'object-fit: cover; object-position: 50.00% 50.00%;';"
                    width="580"
                  />
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-event__meta"
                  >
                    <div
                      class="rpl-card-event__date"
                    >
                      10 to 15 July
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-event__title"
                  >
                    This is the headline of an event
                  </h2>
                   
                  <div
                    class="rpl-card-event__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-event__summary"
                    >
                      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet, consecteten dolor lorem ipsum dolor sit amet, consecte
                    </p>
                  </div>
                   
                  <p
                    class="rpl-card-event__location"
                  >
                    <svg
                      aria-hidden="true"
                      class="rpl-icon rpl-icon--map_marker rpl-icon--color_secondary"
                      overflow="visible"
                      style="width: 9px; height: 12px;"
                      viewBox="0 0 12 16"
                    >
                      <path
                        d="M0 6c0 4.41 6 10 6 10s6-5.59 6-10c0-3.25-2.683-6-6-6S0 2.75 0 6zm3.75 0a2.25 2.25 0 114.502.002A2.25 2.25 0 013.75 6z"
                      />
                       
                    </svg>
                    South Yarra
                  </p>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See event
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       details
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-event rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <img
                    alt=""
                    class="rpl-responsive-image rpl-card-content__image rpl-responsive-image--fit-cover"
                    height="340"
                    src="https://placehold.it/580x340"
                    style="object-position: 50.00% 50.00%; font-family: 'object-fit: cover; object-position: 50.00% 50.00%;';"
                    width="580"
                  />
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-event__meta"
                  >
                    <div
                      class="rpl-card-event__date"
                    >
                      10 July to 10 September 2018
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-event__title"
                  >
                    This is the headline of an event
                  </h2>
                   
                  <div
                    class="rpl-card-event__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-event__summary"
                    >
                      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet, consecteten dolor lorem ipsum dolor sit amet, consecte
                    </p>
                  </div>
                   
                  <p
                    class="rpl-card-event__location"
                  >
                    <svg
                      aria-hidden="true"
                      class="rpl-icon rpl-icon--map_marker rpl-icon--color_secondary"
                      overflow="visible"
                      style="width: 9px; height: 12px;"
                      viewBox="0 0 12 16"
                    >
                      <path
                        d="M0 6c0 4.41 6 10 6 10s6-5.59 6-10c0-3.25-2.683-6-6-6S0 2.75 0 6zm3.75 0a2.25 2.25 0 114.502.002A2.25 2.25 0 013.75 6z"
                      />
                       
                    </svg>
                    South Yarra
                  </p>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See event
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       details
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <!---->
                 
                <div
                  class="rpl-card-content__details"
                >
                  <h2
                    class="rpl-card-keydates__title"
                  >
                    Key calendar dates
                  </h2>
                   
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16h14V5H2v11zM17 2h-2v-.99C15 .452 14.553 0 14 0c-.553 0-1 .452-1 1.01V2H5v-.99C5 .452 4.553 0 4 0c-.553 0-1 .452-1 1.01V2H1a1 1 0 00-1 1v14a1 1 0 001 1h16a1 1 0 001-1V3a1 1 0 00-1-1zm-7 12.021h4v-4h-4v4z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        3 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      Term two starts
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      Its back to the classroom as school start term two on the 16th April.
                    </p>
                  </div>
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16h14V5H2v11zM17 2h-2v-.99C15 .452 14.553 0 14 0c-.553 0-1 .452-1 1.01V2H5v-.99C5 .452 4.553 0 4 0c-.553 0-1 .452-1 1.01V2H1a1 1 0 00-1 1v14a1 1 0 001 1h16a1 1 0 001-1V3a1 1 0 00-1-1zm-7 12.021h4v-4h-4v4z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        23 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      ANZAC Day
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      National day of remembrance to commemorate the ANZACs.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See the events
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       calendar
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-promotion rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <div
                  class="rpl-card-content__image-wrapper"
                >
                  <img
                    alt=""
                    class="rpl-responsive-image rpl-card-content__image rpl-responsive-image--fit-cover"
                    height="340"
                    src="https://placehold.it/580x340"
                    style="object-position: 50.00% 50.00%; font-family: 'object-fit: cover; object-position: 50.00% 50.00%;';"
                    width="580"
                  />
                </div>
                 
                <div
                  class="rpl-card-content__details"
                >
                  <div
                    class="rpl-card-promotion__meta"
                  >
                    <div
                      class="rpl-card-promotion__date"
                    >
                      10 July
                    </div>
                     
                    <div
                      class="rpl-card-promotion__tag"
                    >
                      News
                    </div>
                  </div>
                   
                  <h2
                    class="rpl-card-promotion__title"
                  >
                    This is display copy that wraps 2 lines
                  </h2>
                   
                  <div
                    class="rpl-card-promotion__trim-wrapper"
                    style="max-height: none;"
                  >
                    <p
                      class="rpl-card-promotion__summary"
                    >
                      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet, consecteten dolor at vero eos et accusamus et iusto odio dignis.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      Read
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       more
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <!---->
                 
                <div
                  class="rpl-card-content__details"
                >
                  <h2
                    class="rpl-card-keydates__title"
                  >
                    Key calendar dates
                  </h2>
                   
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16h14V5H2v11zM17 2h-2v-.99C15 .452 14.553 0 14 0c-.553 0-1 .452-1 1.01V2H5v-.99C5 .452 4.553 0 4 0c-.553 0-1 .452-1 1.01V2H1a1 1 0 00-1 1v14a1 1 0 001 1h16a1 1 0 001-1V3a1 1 0 00-1-1zm-7 12.021h4v-4h-4v4z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        3 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      Term two starts
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      Its back to the classroom as school start term two on the 16th April.
                    </p>
                  </div>
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16h14V5H2v11zM17 2h-2v-.99C15 .452 14.553 0 14 0c-.553 0-1 .452-1 1.01V2H5v-.99C5 .452 4.553 0 4 0c-.553 0-1 .452-1 1.01V2H1a1 1 0 00-1 1v14a1 1 0 001 1h16a1 1 0 001-1V3a1 1 0 00-1-1zm-7 12.021h4v-4h-4v4z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        23 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      ANZAC Day
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      National day of remembrance to commemorate the ANZACs.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See the events
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       calendar
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="VueCarousel-slide rpl-card-carousel__slide"
            role="tabpanel"
            tabindex="-1"
          >
            <div
              class="rpl-card-carousel__slide-wrap"
            >
              <a
                class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
                data-print-url="#"
                data-tid="carousel-card"
                href="#"
              >
                <!---->
                 
                <div
                  class="rpl-card-content__details"
                >
                  <h2
                    class="rpl-card-keydates__title"
                  >
                    Key calendar dates
                  </h2>
                   
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16h14V5H2v11zM17 2h-2v-.99C15 .452 14.553 0 14 0c-.553 0-1 .452-1 1.01V2H5v-.99C5 .452 4.553 0 4 0c-.553 0-1 .452-1 1.01V2H1a1 1 0 00-1 1v14a1 1 0 001 1h16a1 1 0 001-1V3a1 1 0 00-1-1zm-7 12.021h4v-4h-4v4z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        3 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      Term two starts
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      Its back to the classroom as school start term two on the 16th April.
                    </p>
                  </div>
                  <div
                    class="rpl-card-keydates__keydate"
                  >
                    <div
                      class="rpl-card-keydates__keydate-date"
                    >
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
                        overflow="visible"
                        style="width: 18px; height: 18px;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2 16h14V5H2v11zM17 2h-2v-.99C15 .452 14.553 0 14 0c-.553 0-1 .452-1 1.01V2H5v-.99C5 .452 4.553 0 4 0c-.553 0-1 .452-1 1.01V2H1a1 1 0 00-1 1v14a1 1 0 001 1h16a1 1 0 001-1V3a1 1 0 00-1-1zm-7 12.021h4v-4h-4v4z"
                          fill-rule="evenodd"
                        />
                         
                      </svg>
                       
                      <span>
                        23 April
                      </span>
                    </div>
                     
                    <h3
                      class="rpl-card-keydates__keydate-title"
                    >
                      ANZAC Day
                    </h3>
                     
                    <p
                      class="rpl-card-keydates__keydate-description"
                    >
                      National day of remembrance to commemorate the ANZACs.
                    </p>
                  </div>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-card-content__link"
                >
                  <span>
                    <span>
                      See the events
                    </span>
                     
                    <span
                      class="rpl-text-icon__group"
                    >
                       calendar
                      <svg
                        aria-hidden="true"
                        class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                        overflow="visible"
                        style="width: 9.1px; height: 8.399999999999999px;"
                        viewBox="0 0 13 12"
                      >
                        <path
                          d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
                        />
                         
                      </svg>
                    </span>
                  </span>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <div
      class="rpl-card-carousel__navigation"
    >
      <button
        aria-label="Go to previous slide"
        class="rpl-card-carousel__navigation-button rpl-card-carousel__navigation-button--prev"
        disabled="disabled"
        role="button"
      >
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_left_secondary rpl-icon--color_mid_neutral_1"
          overflow="visible"
          style="width: 19.200000000000003px; height: 35.2px;"
          viewBox="0 0 12 22"
        >
          <path
            d="M10.747 2.664a1 1 0 00-1.494-1.328l-8 9a1 1 0 000 1.328l8 9a1 1 0 001.494-1.328L3.337 11l7.41-8.336z"
          />
           
        </svg>
      </button>
       
      <button
        aria-label="Go to next slide"
        class="rpl-card-carousel__navigation-button rpl-card-carousel__navigation-button--next"
        role="button"
      >
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_right_secondary rpl-icon--color_primary"
          overflow="visible"
          style="width: 19.200000000000003px; height: 35.2px;"
          viewBox="0 0 12 22"
        >
          <path
            d="M1.253 2.664a1 1 0 111.494-1.328l8 9a1 1 0 010 1.328l-8 9a1 1 0 01-1.494-1.328L8.662 11l-7.41-8.336z"
          />
           
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Card/Card Content (base) Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-content__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-content__image rpl-responsive-image--fit-cover"
      height="340"
      src="https://placehold.it/580x340"
      style="object-position: 50.00% 50.00%; font-family: 'object-fit: cover; object-position: 50.00% 50.00%;';"
      width="580"
    />
  </div>
   
  <div
    class="rpl-card-content__details"
  >
    <div>
      <h2>
        Custom Content
      </h2>
      <p>
        Lorem ipsum dolor sit amet.
      </p>
    </div>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         more
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
          overflow="visible"
          style="width: 9.1px; height: 8.399999999999999px;"
          viewBox="0 0 13 12"
        >
          <path
            d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
          />
           
        </svg>
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Cta Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-cta rpl-card-content--no-image rpl-card-content--default"
  data-print-url="#"
  href="#"
>
  <!---->
   
  <div
    class="rpl-card-content__details"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-cta__image rpl-responsive-image--fit-cover"
      height="148"
      src="https://placehold.it/148x148"
      style="object-position: 100% 100%; font-family: 'object-fit: cover; object-position: 100% 100%;';"
      width="148"
    />
     
    <h2
      class="rpl-card-cta__title"
    >
      Want to submit an event?
    </h2>
     
    <div
      class="rpl-card-cta__trim-wrapper"
      style="max-height: none;"
    >
      <div
        class="rpl-card-cta__summary"
      >
        <p>
          Lorem ipsum dolor 
          <b>
            sit amet
          </b>
          , consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua laboris nisi ut aliquip ex ea commodo consequat.
        </p>
      </div>
    </div>
     
    <span
      class="rpl-card-cta__button"
    >
      See event details
    </span>
     
    <!---->
  </div>
   
  <!---->
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Emergency Contact Default 1`] = `
<div
  class="rpl-card-emergency"
>
  <div
    class="rpl-card-emergency__content"
  >
    <div
      class="rpl-card-emergency__subtitle"
    >
      <span>
        Urgent
      </span>
    </div>
     
    <h2
      class="rpl-card-emergency__title"
    >
      Emergency Assistance
    </h2>
     
    <p
      class="rpl-card-emergency__summary"
    >
      Dial 000 for police, fire & ambulance
    </p>
  </div>
   
  <div
    class="rpl-card-emergency__cta"
  >
    <span
      class="rpl-card-emergency__separator"
    />
     
    <a
      class="rpl-link rpl-card-emergency__cta-link"
      data-print-url="tel:000"
      href="tel:000"
    >
      <svg
        aria-hidden="true"
        class="rpl-icon rpl-icon--phone_number rpl-icon--color_primary"
        overflow="visible"
        style="width: 14.700000000000001px; height: 14.700000000000001px;"
        viewBox="0 0 14 14"
      >
        <path
          d="M13.738 10.68l-2.317-2.33a.899.899 0 00-1.272-.001l-2.06 2.058-4.494-4.492 2.062-2.06a.899.899 0 00.001-1.27L3.339.263a.9.9 0 00-1.272 0L.004 2.325 0 2.322C0 8.772 5.231 14 11.684 14l2.053-2.05a.897.897 0 00.001-1.27z"
        />
         
      </svg>
       
      <span
        class="rpl-card-emergency__cta-link-text"
      >
        
        Call 000
      
      </span>
    </a>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Card/Card Event Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-event rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-content__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-content__image rpl-responsive-image--fit-cover"
      height="199"
      src="https://placehold.it/304x199"
      style="object-position: 50.00% 50.25%; font-family: 'object-fit: cover; object-position: 50.00% 50.25%;';"
      width="304"
    />
  </div>
   
  <div
    class="rpl-card-content__details"
  >
    <div
      class="rpl-card-event__meta"
    >
      <div
        class="rpl-card-event__date"
      >
        10 to 11 July
      </div>
    </div>
     
    <h2
      class="rpl-card-event__title"
    >
      This is the headline of an event with a location that will stretch over over 3 lines
    </h2>
     
    <div
      class="rpl-card-event__trim-wrapper"
      style="max-height: none;"
    >
      <p
        class="rpl-card-event__summary"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua laboris nisi ut aliquip ex ea commodo consequat.
      </p>
    </div>
     
    <p
      class="rpl-card-event__location"
    >
      <svg
        aria-hidden="true"
        class="rpl-icon rpl-icon--map_marker rpl-icon--color_secondary"
        overflow="visible"
        style="width: 9px; height: 12px;"
        viewBox="0 0 12 16"
      >
        <path
          d="M0 6c0 4.41 6 10 6 10s6-5.59 6-10c0-3.25-2.683-6-6-6S0 2.75 0 6zm3.75 0a2.25 2.25 0 114.502.002A2.25 2.25 0 013.75 6z"
        />
         
      </svg>
      South Yarra
    </p>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        See event
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         details
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
          overflow="visible"
          style="width: 9.1px; height: 8.399999999999999px;"
          viewBox="0 0 13 12"
        >
          <path
            d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
          />
           
        </svg>
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Image Navigation Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-image-navigation rpl-card-content--inline rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-content__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-content__image rpl-responsive-image--fit-cover"
      height="199"
      src="https://placehold.it/304x199"
      style="object-position: 50.00% 50.25%; font-family: 'object-fit: cover; object-position: 50.00% 50.25%;';"
      width="304"
    />
  </div>
   
  <div
    class="rpl-card-content__details"
  >
    <div
      class="rpl-card-image-navigation__details"
    >
      <div
        class="rpl-card-image-navigation__meta"
      >
        <div
          class="rpl-card-image-navigation__date"
        >
          23 March
        </div>
         
        <div
          class="rpl-card-image-navigation__tag"
        >
          Community
        </div>
      </div>
       
      <h2
        class="rpl-card-image-navigation__title"
      >
        This heading could wrap over two lines
      </h2>
       
      <p
        class="rpl-card-image-navigation__summary"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua laboris nisi ut aliquip ex ea commodo consequat.
      </p>
    </div>
     
    <div
      class="rpl-card-content__link"
    >
      <span>
        <span>
          Call to
        </span>
         
        <span
          class="rpl-text-icon__group"
        >
           action
          <svg
            aria-hidden="true"
            class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
            overflow="visible"
            style="width: 9.1px; height: 8.399999999999999px;"
            viewBox="0 0 13 12"
          >
            <path
              d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
            />
             
          </svg>
        </span>
      </span>
    </div>
  </div>
   
  <!---->
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Keydates Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-keydates rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <!---->
   
  <div
    class="rpl-card-content__details"
  >
    <h2
      class="rpl-card-keydates__title"
    >
      Key calendar dates
    </h2>
     
    <div
      class="rpl-card-keydates__keydate"
    >
      <div
        class="rpl-card-keydates__keydate-date"
      >
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
          overflow="visible"
          style="width: 18px; height: 18px;"
          viewBox="0 0 18 18"
        >
          <path
            clip-rule="evenodd"
            d="M2 16h14V5H2v11zM17 2h-2v-.99C15 .452 14.553 0 14 0c-.553 0-1 .452-1 1.01V2H5v-.99C5 .452 4.553 0 4 0c-.553 0-1 .452-1 1.01V2H1a1 1 0 00-1 1v14a1 1 0 001 1h16a1 1 0 001-1V3a1 1 0 00-1-1zm-7 12.021h4v-4h-4v4z"
            fill-rule="evenodd"
          />
           
        </svg>
         
        <span>
          3 April
        </span>
      </div>
       
      <h3
        class="rpl-card-keydates__keydate-title"
      >
        Term two starts
      </h3>
       
      <p
        class="rpl-card-keydates__keydate-description"
      >
        Its back to the classroom as school start term two on the 16th April.
      </p>
    </div>
    <div
      class="rpl-card-keydates__keydate"
    >
      <div
        class="rpl-card-keydates__keydate-date"
      >
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--calendar rpl-icon--color_white"
          overflow="visible"
          style="width: 18px; height: 18px;"
          viewBox="0 0 18 18"
        >
          <path
            clip-rule="evenodd"
            d="M2 16h14V5H2v11zM17 2h-2v-.99C15 .452 14.553 0 14 0c-.553 0-1 .452-1 1.01V2H5v-.99C5 .452 4.553 0 4 0c-.553 0-1 .452-1 1.01V2H1a1 1 0 00-1 1v14a1 1 0 001 1h16a1 1 0 001-1V3a1 1 0 00-1-1zm-7 12.021h4v-4h-4v4z"
            fill-rule="evenodd"
          />
           
        </svg>
         
        <span>
          23 April
        </span>
      </div>
       
      <h3
        class="rpl-card-keydates__keydate-title"
      >
        ANZAC Day
      </h3>
       
      <p
        class="rpl-card-keydates__keydate-description"
      >
        National day of remembrance to commemorate the ANZACs.
      </p>
    </div>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         more
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
          overflow="visible"
          style="width: 9.1px; height: 8.399999999999999px;"
          viewBox="0 0 13 12"
        >
          <path
            d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
          />
           
        </svg>
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Navigation Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-navigation rpl-card-content--no-image rpl-card-content--simple rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <!---->
   
  <div
    class="rpl-card-content__details"
  >
    <h2
      class="rpl-card-navigation__title rpl-card-navigation__title--with-summary"
    >
      First navigation card
    </h2>
     
    <p
      class="rpl-card-navigation__summary"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         more
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
          overflow="visible"
          style="width: 9.1px; height: 8.399999999999999px;"
          viewBox="0 0 13 12"
        >
          <path
            d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
          />
           
        </svg>
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Navigation Featured Default 1`] = `
<a
  class="rpl-link rpl-card-navigation-featured"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-navigation-featured__inner"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-navigation-featured__image rpl-responsive-image--fit-cover"
      height="497"
      src="https://placehold.it/818x497"
      style="object-position: 50.00% 49.90%; font-family: 'object-fit: cover; object-position: 50.00% 49.90%;';"
      width="818"
    />
     
    <div
      class="rpl-card-navigation-featured__meta_and_title rpl-card-navigation-featured__meta_and_title--image rpl-card-navigation-featured__meta_and_title--summary"
    >
      <div
        class="rpl-card-navigation-featured__meta"
      >
        <span
          class="rpl-card-navigation-featured__date"
        >
          23 March
        </span>
         
        <span
          class="rpl-card-navigation-featured__tag"
        >
          Community
        </span>
      </div>
       
      <h2
        class="rpl-card-navigation-featured__title"
      >
        <span>
          This is display copy that wraps 2 lines
        </span>
      </h2>
    </div>
  </div>
   
  <p
    class="rpl-card-navigation-featured__summary rpl-card-navigation-featured__summary--image"
  >
    We are looking at ways to make housing more affordable and renting more secure. Tell us what works for you or find out what's happening.
  </p>
   
  <svg
    aria-hidden="true"
    class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_white"
    overflow="visible"
    style="width: 13px; height: 12px;"
    viewBox="0 0 13 12"
  >
    <path
      d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
    />
     
  </svg>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Navigation V2 Default 1`] = `
<a
  class="rpl-link rpl-card-navigation"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-navigation__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-navigation__image rpl-responsive-image--fit-cover"
      height="199"
      sizes="(max-width: 576px) 764px, (max-width: 768px) 448px, (max-width: 992px) 333px, 100vw"
      src="https://placehold.it/304x199"
      srcset="https://placehold.it/304x199?w=764&h=534 764w, https://placehold.it/304x199?w=764&h=200 764w, https://placehold.it/304x199?w=448&h=232 448w, https://placehold.it/304x199?w=333&h=232 333w"
      style="object-position: 50.00% 50.25%; font-family: 'object-fit: cover; object-position: 50.00% 50.25%;';"
      width="304"
    />
  </div>
   
  <div
    class="rpl-card-navigation__details"
  >
    <div
      class="rpl-card-navigation__meta"
    >
      <div
        class="rpl-card-navigation__tag"
      >
        Event
      </div>
       
      <!---->
       
      <div
        class="rpl-card-navigation__date"
      >
        23 March 2020
      </div>
    </div>
     
    <h2
      class="rpl-card-navigation__title"
    >
      <span>
        Navigation card V2
      </span>
    </h2>
     
    <p
      class="rpl-card-navigation__summary"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
     
    <p
      class="rpl-card-navigation__author"
    >
      <strong>
        Author:
      </strong>
       John Doe
    </p>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Navigation V2 Featured 1`] = `
<a
  class="rpl-link rpl-card-navigation rpl-card-navigation--featured"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-navigation__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-navigation__image rpl-responsive-image--fit-cover"
      height="355"
      sizes="(max-width: 576px) 764px, (max-width: 768px) 448px, (max-width: 992px) 333px, 100vw"
      src="https://placehold.it/608x355"
      srcset="https://placehold.it/608x355?w=764&h=534 764w, https://placehold.it/608x355?w=764&h=200 764w, https://placehold.it/608x355?w=448&h=232 448w, https://placehold.it/608x355?w=333&h=232 333w"
      style="object-position: 49.34% 42.25%; font-family: 'object-fit: cover; object-position: 49.34% 42.25%;';"
      width="608"
    />
  </div>
   
  <div
    class="rpl-card-navigation__details"
  >
    <div
      class="rpl-card-navigation__meta"
    >
      <div
        class="rpl-card-navigation__tag"
      >
        Publication
      </div>
       
      <!---->
       
      <div
        class="rpl-card-navigation__date"
      >
        23 March 2020
      </div>
    </div>
     
    <h2
      class="rpl-card-navigation__title"
    >
      <span>
        Navigation card V2
      </span>
    </h2>
     
    <p
      class="rpl-card-navigation__summary"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
     
    <p
      class="rpl-card-navigation__author"
    >
      <strong>
        Author:
      </strong>
       John Doe
    </p>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Navigation V2 Grant 1`] = `
<a
  class="rpl-link rpl-card-navigation"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-navigation__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-navigation__image rpl-responsive-image--fit-cover"
      height="199"
      sizes="(max-width: 576px) 764px, (max-width: 768px) 448px, (max-width: 992px) 333px, 100vw"
      src="https://placehold.it/304x199"
      srcset="https://placehold.it/304x199?w=764&h=534 764w, https://placehold.it/304x199?w=764&h=200 764w, https://placehold.it/304x199?w=448&h=232 448w, https://placehold.it/304x199?w=333&h=232 333w"
      style="object-position: 50.00% 50.25%; font-family: 'object-fit: cover; object-position: 50.00% 50.25%;';"
      width="304"
    />
  </div>
   
  <div
    class="rpl-card-navigation__details"
  >
    <div
      class="rpl-card-navigation__meta"
    >
      <div
        class="rpl-card-navigation__tag"
      >
        Grant
      </div>
       
      <div
        class="rpl-card-navigation__status rpl-card-navigation__status--open"
      >
        <svg
          aria-hidden="true"
          class="rpl-card-navigation__status-icon rpl-icon rpl-icon--success rpl-icon--color_success"
          overflow="visible"
          style="width: 10px; height: 10px;"
          viewBox="0 0 20 20"
        >
          <path
            d="M10 20C4.477 20 0 15.523 0 10S4.477 0 10 0s10 4.477 10 10-4.477 10-10 10zm2.583-14.385l-3.744 5.99-1.607-1.607a1.308 1.308 0 00-1.849 1.85l2.77 2.769a1.308 1.308 0 002.033-.232L14.8 7.001a1.308 1.308 0 10-2.218-1.386h.001z"
          />
           
        </svg>
         
        <span>
          open
        </span>
      </div>
       
      <!---->
    </div>
     
    <h2
      class="rpl-card-navigation__title"
    >
      <span>
        Navigation card V2
      </span>
    </h2>
     
    <p
      class="rpl-card-navigation__summary"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
     
    <p
      class="rpl-card-navigation__author"
    >
      <strong>
        Author:
      </strong>
       John Doe
    </p>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Navigation V2 Without image 1`] = `
<a
  class="rpl-link rpl-card-navigation"
  data-print-url="#"
  href="#"
>
  <!---->
   
  <div
    class="rpl-card-navigation__details"
  >
    <div
      class="rpl-card-navigation__meta"
    >
      <div
        class="rpl-card-navigation__tag"
      >
        Publication
      </div>
       
      <!---->
       
      <div
        class="rpl-card-navigation__date"
      >
        23 March 2020
      </div>
    </div>
     
    <h2
      class="rpl-card-navigation__title"
    >
      <span>
        Navigation card V2
      </span>
    </h2>
     
    <p
      class="rpl-card-navigation__summary"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
     
    <p
      class="rpl-card-navigation__author"
    >
      <strong>
        Author:
      </strong>
       John Doe
    </p>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Profile Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-profile rpl-card-content--no-image rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <!---->
   
  <div
    class="rpl-card-content__details"
  >
    <div
      class="rpl-card-profile__inner"
    >
      <img
        alt=""
        class="rpl-card-profile__image"
        src="[object Object]"
      />
       
      <h2
        class="rpl-card-profile__name rpl-card-profile__name--no-margin"
      >
        Stella Young
      </h2>
       
      <p
        class="rpl-card-profile__lifespan"
      >
        (1982 - 2014)
      </p>
       
      <p
        class="rpl-card-profile__induction"
      >
        <span>
          Inducted
        </span>
         
        <span>
          2017
        </span>
      </p>
       
      <p
        class="rpl-card-profile__summary"
      >
        Journalist, comedian, feminist and fierce disability activist.
      </p>
    </div>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read Stella's
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         profile
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
          overflow="visible"
          style="width: 9.1px; height: 8.399999999999999px;"
          viewBox="0 0 13 12"
        >
          <path
            d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
          />
           
        </svg>
      </span>
    </span>
  </div>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Promotion - V2 Event 1`] = `
<a
  class="rpl-link rpl-card-promo rpl-card-promo--no-image"
  data-print-url="#"
  href="#"
>
  <span
    class="rpl-link__inner"
  >
    <!---->
     
    <div
      class="rpl-card-promo__content"
    >
      <div
        class="rpl-card-promo__meta"
      >
        <div
          class="rpl-card-promo__tag"
        >
          Event
        </div>
         
        <!---->
         
        <!---->
         
        <div
          class="rpl-card-promo__date"
        >
          02 Jul to 25 Sep 2020
        </div>
      </div>
       
      <h2
        class="rpl-card-promo__title"
      >
        First promo card
      </h2>
       
      <p
        class="rpl-card-promo__summary"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
      </p>
       
    </div>
  </span>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Promotion - V2 Grant 1`] = `
<a
  class="rpl-link rpl-card-promo rpl-card-promo--no-image"
  data-print-url="#"
  href="#"
>
  <span
    class="rpl-link__inner"
  >
    <!---->
     
    <div
      class="rpl-card-promo__content"
    >
      <div
        class="rpl-card-promo__meta"
      >
        <div
          class="rpl-card-promo__tag"
        >
          Grant
        </div>
         
        <!---->
         
        <div
          class="rpl-card-promo__status rpl-card-promo__status--open"
        >
          <svg
            aria-hidden="true"
            class="rpl-card-promo__status-icon rpl-icon rpl-icon--success rpl-icon--color_success"
            overflow="visible"
            style="width: 10px; height: 10px;"
            viewBox="0 0 20 20"
          >
            <path
              d="M10 20C4.477 20 0 15.523 0 10S4.477 0 10 0s10 4.477 10 10-4.477 10-10 10zm2.583-14.385l-3.744 5.99-1.607-1.607a1.308 1.308 0 00-1.849 1.85l2.77 2.769a1.308 1.308 0 002.033-.232L14.8 7.001a1.308 1.308 0 10-2.218-1.386h.001z"
            />
             
          </svg>
           
          <span>
            open
          </span>
        </div>
         
        <!---->
      </div>
       
      <h2
        class="rpl-card-promo__title"
      >
        First promo card
      </h2>
       
      <p
        class="rpl-card-promo__summary"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
      </p>
       
    </div>
  </span>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Promotion - V2 Landing Page 1`] = `
<a
  class="rpl-link rpl-card-promo rpl-card-promo--no-image"
  data-print-url="#"
  href="#"
>
  <span
    class="rpl-link__inner"
  >
    <!---->
     
    <div
      class="rpl-card-promo__content"
    >
      <div
        class="rpl-card-promo__meta"
      >
        <!---->
         
        <div
          class="rpl-card-promo__topic"
        >
          Arts, Culture and Humanities
        </div>
         
        <!---->
         
        <!---->
      </div>
       
      <h2
        class="rpl-card-promo__title"
      >
        First promo card
      </h2>
       
      <p
        class="rpl-card-promo__summary"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
      </p>
       
    </div>
  </span>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Promotion - V2 Profile 1`] = `
<a
  class="rpl-link rpl-card-promo rpl-card-promo--with-image rpl-card-promo--profile"
  data-print-url="#"
  href="#"
>
  <span
    class="rpl-link__inner"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-promo__image rpl-responsive-image--fit-cover"
      src="https://s3.amazonaws.com/uifaces/faces/twitter/yecidsm/128.jpg"
    />
     
    <div
      class="rpl-card-promo__content"
    >
      <div
        class="rpl-card-promo__meta"
      >
        <div
          class="rpl-card-promo__tag"
        >
          Profile
        </div>
         
        <div
          class="rpl-card-promo__topic"
        >
          02 July 2020
        </div>
         
        <!---->
         
        <!---->
      </div>
       
      <h2
        class="rpl-card-promo__title"
      >
        First promo card
      </h2>
       
      <p
        class="rpl-card-promo__summary"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut ali...
      </p>
       
    </div>
  </span>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Promotion - V2 With Image 1`] = `
<a
  class="rpl-link rpl-card-promo rpl-card-promo--with-image"
  data-print-url="#"
  href="#"
>
  <span
    class="rpl-link__inner"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-promo__image rpl-responsive-image--fit-cover"
      src="https://images.unsplash.com/photo-1602699121297-81f2312fa4e7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=80"
    />
     
    <div
      class="rpl-card-promo__content"
    >
      <div
        class="rpl-card-promo__meta"
      >
        <!---->
         
        <div
          class="rpl-card-promo__topic"
        >
          Arts, Culture and Humanities
        </div>
         
        <!---->
         
        <!---->
      </div>
       
      <h2
        class="rpl-card-promo__title"
      >
        First promo card
      </h2>
       
      <p
        class="rpl-card-promo__summary"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut ali...
      </p>
       
    </div>
  </span>
</a>
`;

exports[`RippleStoryshots Molecules/Card/Card Promotion Default 1`] = `
<a
  class="rpl-link rpl-card-content rpl-card-promotion rpl-card-content--default rpl-card-content--has-link-text"
  data-print-url="#"
  href="#"
>
  <div
    class="rpl-card-content__image-wrapper"
  >
    <img
      alt=""
      class="rpl-responsive-image rpl-card-content__image rpl-responsive-image--fit-cover"
      height="199"
      src="https://placehold.it/304x199"
      style="object-position: 50.00% 50.25%; font-family: 'object-fit: cover; object-position: 50.00% 50.25%;';"
      width="304"
    />
  </div>
   
  <div
    class="rpl-card-content__details"
  >
    <div
      class="rpl-card-promotion__meta"
    >
      <div
        class="rpl-card-promotion__date"
      >
        23 March
      </div>
       
      <div
        class="rpl-card-promotion__tag"
      >
        News
      </div>
    </div>
     
    <h2
      class="rpl-card-promotion__title"
    >
      This is display copy that wraps 2 lines
    </h2>
     
    <div
      class="rpl-card-promotion__trim-wrapper"
      style="max-height: none;"
    >
      <p
        class="rpl-card-promotion__summary"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  labore et dolore magna aliqua laboris nisi ut aliquip ex ea commodo consequat.
      </p>
    </div>
     
    <!---->
  </div>
   
  <div
    class="rpl-card-content__link"
  >
    <span>
      <span>
        Read
      </span>
       
      <span
        class="rpl-text-icon__group"
      >
         more
        <svg
          aria-hidden="true"
          class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
          overflow="visible"
          style="width: 9.1px; height: 8.399999999999999px;"
          viewBox="0 0 13 12"
        >
          <path
            d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
          />
           
        </svg>
      </span>
    </span>
  </div>
</a>
`;
